Fix overflowing element

--- a/css/graphicsStyle.css
+++ b/css/graphicsStyle.css
@@ -1,11 +1,13 @@
+@media only screen and (max-width: 600px)  {
+  canvas {
+    display: none;
+ 
+  }
+}
 canvas {
     z-index: 1;
     position: absolute;
     background-color: transparent;
+    width: 100%;
 }
-@media only screen and (max-width: 600px)  {
-    canvas {
-      display: none;
-   
-    }
-  }
+
